{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "2b103ce6-e4e5-4e0e-807d-dee592637913",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "64f4ec32-eab4-435f-871b-c883e0c8fde6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "e5b2ef6d-f1da-4505-b0d4-4212a925bcbe",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "81eae5c6-a079-406e-a0ac-0c0d0f2e494d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6a0dcef3-5f35-4b3f-80c8-f93581399e3c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f3ac3f0e-4410-4aac-ad5d-525ba0c2a472",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "869ded8f-1001-4c9d-ae3d-3e50fed5da9d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e2578029-120a-4c24-b926-d12f238a74b5",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraMovement",
            "id": "a40c4710-63dc-4e28-942c-e74dceefbccb",
            "actions": [
                {
                    "name": "CameraRotation",
                    "type": "Value",
                    "id": "1582079e-23ac-4ad4-a799-d3055fbc7898",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4e384e3d-4989-4d65-b435-63ab99cbb796",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b225354-8b48-473f-9448-05426e7f946b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}